// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple resources GET /books when all of the resources are published should fetch multiple resources of type book 1`] = `
Array [
  Object {
    "author": "John Doeburg",
    "id": "23",
    "publicationDate": "2002",
    "subtitle": "The wolf's revenge",
    "title": "Three Little Pigs",
  },
  Object {
    "author": "Jane Donnaldson",
    "id": "24",
    "publicationDate": "2011",
    "title": "An Adventure Story",
  },
]
`;

exports[`When fetching multiple resources GET /books when some of the resources are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "author": "John Doeburg",
    "id": "23",
    "publicationDate": "2002",
    "subtitle": "The wolf's revenge",
    "title": "Three Little Pigs",
  },
  Object {
    "author": "Jane Donnaldson",
    "id": "24",
    "publicationDate": "2011",
    "title": "An Adventure Story",
  },
]
`;

exports[`When fetching multiple resources GET /photographs when all of the resources are published should fetch multiple resources of type photograph 1`] = `
Array [
  Object {
    "id": "0",
    "imageURL": "https://www.myaudio.com:5555/media?id=cat.png",
    "photographer": "Susie McRealart",
  },
  Object {
    "id": "1",
    "imageURL": "https://www.myaudio.com:5555/media?id=dog.png",
    "photographer": "Robert McRealart",
  },
]
`;

exports[`When fetching multiple resources GET /photographs when some of the resources are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "id": "0",
    "imageURL": "https://www.myaudio.com:5555/media?id=cat.png",
    "photographer": "Susie McRealart",
  },
  Object {
    "id": "1",
    "imageURL": "https://www.myaudio.com:5555/media?id=dog.png",
    "photographer": "Robert McRealart",
  },
]
`;

exports[`When fetching multiple resources GET /spatialFeatures when all of the resources are published should fetch multiple resources of type spatialFeature 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        100,
        0,
      ],
      "type": "Point",
    },
    "id": "100",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        20,
        10,
      ],
      "type": "Point",
    },
    "id": "101",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        70.5,
        23.5,
      ],
      "type": "Point",
    },
    "id": "102",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          1,
          2,
        ],
        Array [
          1,
          3,
        ],
        Array [
          1.5,
          3.5,
        ],
        Array [
          3,
          4.2,
        ],
      ],
      "type": "LineString",
    },
    "id": "1",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            1,
            3,
          ],
          Array [
            2,
            5,
          ],
          Array [
            1.5,
            3.7,
          ],
          Array [
            1.2,
            3.3,
          ],
          Array [
            1,
            3,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": "300",
  },
]
`;

exports[`When fetching multiple resources GET /spatialFeatures when some of the resources are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        100,
        0,
      ],
      "type": "Point",
    },
    "id": "100",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        20,
        10,
      ],
      "type": "Point",
    },
    "id": "101",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        70.5,
        23.5,
      ],
      "type": "Point",
    },
    "id": "102",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          1,
          2,
        ],
        Array [
          1,
          3,
        ],
        Array [
          1.5,
          3.5,
        ],
        Array [
          3,
          4.2,
        ],
      ],
      "type": "LineString",
    },
    "id": "1",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            1,
            3,
          ],
          Array [
            2,
            5,
          ],
          Array [
            1.5,
            3.7,
          ],
          Array [
            1.2,
            3.3,
          ],
          Array [
            1,
            3,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": "300",
  },
]
`;

exports[`When fetching multiple resources GET /terms when all of the resources are published should fetch multiple resources of type term 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "term": "Chil-term-no-english",
  },
]
`;

exports[`When fetching multiple resources GET /terms when some of the resources are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "term": "Chil-term-no-english",
  },
]
`;

exports[`When fetching multiple resources GET /transcribedAudioItems when all of the resources are published should fetch multiple resources of type transcribedAudio 1`] = `
Array [
  Object {
    "audioURL": "https://www.myaudio.com:5555/media?id=123.mp3.mp3",
    "id": "110",
    "length": 20000,
    "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
    "start": 0,
  },
]
`;

exports[`When fetching multiple resources GET /transcribedAudioItems when some of the resources are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "audioURL": "https://www.myaudio.com:5555/media?id=123.mp3.mp3",
    "id": "110",
    "length": 20000,
    "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
    "start": 0,
  },
]
`;

exports[`When fetching multiple resources GET /vocabularyLists when all of the resources are published should fetch multiple resources of type vocabularyList 1`] = `
Array [
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "1",
          "term": "Chil-term-1",
          "termEnglish": "Engl-term-1",
        },
        "variableValues": Object {
          "person": "11",
        },
      },
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "21",
        },
      },
    ],
    "id": "vocabulary-list-id-1",
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "23",
        },
      },
    ],
    "id": "vocabulary-list-id-2",
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;

exports[`When fetching multiple resources GET /vocabularyLists when some of the resources are unpublished should return the expected number of results 1`] = `
Array [
  Object {
    "entries": Array [],
    "id": "vocabulary-list-id-1",
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [],
    "id": "vocabulary-list-id-2",
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;
